--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -52,8 +52,10 @@ body {
 }
 
 .movies-listing .movies-box-image-container {
-    max-height: 208px;
+    max-height: 170px;
     overflow: hidden;
+    display: block;
+    background-size: cover;
 }
 
 .movies-listing .movies-box-image-container .movies-box-image {
@@ -63,6 +65,7 @@ body {
     display: block;
     margin: auto;
     width: 100%;
+    height: 100%;
 }
 
 img {
@@ -87,7 +90,7 @@ img {
     color: #586f6f;
     font-size: 14px;
     font-weight: 200;
-    max-height: 145px;
+    max-height: 100px;
     overflow: hidden;
     padding: 5px 15px;
 }
