--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -29,7 +29,6 @@
     </div>
 
     <div class="row course-list list">
-
         <div class="col-md-4">
             <div class="movies-listing">
                 <div class="row">
@@ -67,8 +66,90 @@
                         </div>
                     </div>
                 </div>
-
             </div>
+        </div>
+    </div>
+        <div class="col-md-4">
+            <div class="movies-listing">
+                <div class="row">
+                    <a href="/horror">
+                        <div class="col-lg-12">
+                            <div class="movies-box-image-container">
+                                <img role="presentation"
+                                     src="images/horror.jpg"
+                                     class="movies-box-image">
+                            </div>
+                            <div class="movies-listing-title">
+                                Horror
+                            </div>
+                            <div class="movies-listing-subtitle">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ac felis libero.
+                                Etiam facilisis, felis vel congue aliquet, magna purus euismod augue, pharetra varius ipsum dui in metus.
+                                Nunc rutrum vehicula lorem, sed iaculis orci interdum at. Etiam turpis ipsum, laoreet ut sodales auctor, suscipit ac augue.
+                                Vestibulum mollis scelerisque mi, vitae fermentum velit mattis eu.
+                                Donec auctor porttitor magna eu fringilla. Nunc vel consequat ipsum.
+                                In feugiat nunc vitae nisl ultricies, quis mattis erat ornare. Vestibulum pellentesque blandit facilisis.
+                                Praesent sit amet orci varius, dictum augue sed, tristique tortor. Nullam pretium ex a erat accumsan sollicitudin.
+                                Sed lobortis, ante in pellentesque euismod, justo elit ultricies nulla, nec gravida libero sapien ut urna.
+                            </div>
+                        </div>
+                    </a>
+                    <div class="row movies-listing-extra-info col-xs-12">
+                        <div class="col-xs-8">
+                            <div class="small movie-author-name">
+                                Total movies
+                            </div>
+                        </div>
+                        <div class="col-xs-4">
+                            <div class="small movie-price">
+                                86
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+            <div class="col-md-4">
+                <div class="movies-listing">
+                    <div class="row">
+                        <a href="/sci-fi">
+                            <div class="col-lg-12">
+                                <div class="movies-box-image-container">
+                                    <img role="presentation"
+                                         src="images/sci-fi.jpg"
+                                         class="movies-box-image">
+                                </div>
+                                <div class="movies-listing-title">
+                                    Sci-Fi
+                                </div>
+                                <div class="movies-listing-subtitle">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ac felis libero.
+                                    Etiam facilisis, felis vel congue aliquet, magna purus euismod augue, pharetra varius ipsum dui in metus.
+                                    Nunc rutrum vehicula lorem, sed iaculis orci interdum at. Etiam turpis ipsum, laoreet ut sodales auctor, suscipit ac augue.
+                                    Vestibulum mollis scelerisque mi, vitae fermentum velit mattis eu.
+                                    Donec auctor porttitor magna eu fringilla. Nunc vel consequat ipsum.
+                                    In feugiat nunc vitae nisl ultricies, quis mattis erat ornare. Vestibulum pellentesque blandit facilisis.
+                                    Praesent sit amet orci varius, dictum augue sed, tristique tortor. Nullam pretium ex a erat accumsan sollicitudin.
+                                    Sed lobortis, ante in pellentesque euismod, justo elit ultricies nulla, nec gravida libero sapien ut urna.
+                                </div>
+                            </div>
+                        </a>
+                        <div class="row movies-listing-extra-info col-xs-12">
+                            <div class="col-xs-8">
+                                <div class="small movie-author-name">
+                                    Total movies
+                                </div>
+                            </div>
+                            <div class="col-xs-4">
+                                <div class="small movie-price">
+                                    162
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
 
         </div>
 
