--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -12,11 +12,13 @@ body {
     background-size: cover;
     background-image: linear-gradient(to right bottom,
     #141E30, #2980b9);
+    background-repeat: no-repeat;
     color: lightslategrey;
     text-align: center;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 14px;
     line-height: 1.42857;
+    min-height: 650px;
 }
 
 .row {
@@ -75,7 +77,7 @@ img {
 img {
     border: 0 none;
 }
-
+/*CATEGORIES-MOVIES*/
 .movies-listing .movies-listing-title {
     color: #4169E1;
     font-size: 18px;
@@ -114,5 +116,17 @@ img {
     margin-right: 40px;
     margin-bottom: 5px;
     text-align: right;
-
 }
+
+/*REGISTRATION*/
+
+.input-name {
+    text-align: right;
+}
+
+.registration-form {
+    margin-top: 100px;
+}
+
+
+
