--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -18,38 +18,47 @@
 <div class="container">
     <form class="form-horizontal registration-form" th:object="${userDTO}" th:action="@{/checkRegistration}" method="post">
 
-        <div class="form-group">
+
+        <div th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
+            <p>Please correct values in error block</p>
+        </div>
+        <div class="form-group" th:class="${#fields.hasErrors('firstName')} ? 'form-group has-error' : 'form-group'">
             <label class="col-xl-3">First name</label>
             <div class="col-xl-9">
                 <label>
-                    <input type="text" class="form-control" th:field="*{firstName}">
+                    <input type="text" class="form-control" th:field="*{firstName}" th:errorclass="has-error">
+                    <span class="help-block" th:if="${#fields.hasErrors('firstName')}">
+                        <ul>
+                            <li th:each="err : ${#fields.errors('firstName')}" th:text="${err}"></li>
+                        </ul>
+                    </span>
                 </label>
             </div>
         </div>
-
-        <div class="form-group">
+        <div class="form-group" th:class="${#fields.hasErrors('lastName')} ? 'form-group has-error' : 'form-group'">
             <label class="col-xl-3">Last name</label>
             <div class="col-xl-9">
                 <label>
-                    <input type="text" class="form-control" th:field="*{lastName}">
+                    <input type="text" class="form-control" th:field="*{lastName}" th:errorClass="has-error">
+                    <span class="help-block" th:if="${#fields.hasErrors('lastName')}">
+                        <ul>
+                            <li th:each="err : ${#fields.errors('lastName')}" th:text="${err}"></li>
+                        </ul>
+                    </span>
                 </label>
             </div>
         </div>
 
-        <div class="form-group">
-            <label class="col-xl-3">Date of birth</label>
-            <div class="col-xl-9">
-                <label>
-                    <input type="text" class="form-control" th:field="*{dateOfBirth}">
-                </label>
-            </div>
-        </div>
-
-        <div class="form-group">
+        <div class="form-group" th:class="${#fields.hasErrors('gender')} ? 'form-group has-error' : 'form-group'">
             <label class="col-xl-3">Gender</label>
             <div class="col-xl-9">
                 <label>
-                    <input type="text" class="form-control" th:field="*{gender}">
+                    <input type="text" class="form-control" th:field="*{gender}" th:errorClass="has-error">
+                    <span class="help-block" th:if="${#fields.errors('gender')}">
+                         <ul>
+                            <li th:each="err : ${#fields.errors('gender')}" th:text="${err}"></li>
+                        </ul>
+                    </span>
                 </label>
             </div>
         </div>
