--- a/src/main/resources/templates/fragmets/categorydiv.html
+++ b/src/main/resources/templates/fragmets/categorydiv.html
@@ -17,11 +17,11 @@
     <div class="col-md-4" th:fragment="categorydiv">
         <div class="movies-listing">
             <div class="row">
-                <a th:href="@{'/home/' + ${category.name}}">
+                <a th:href="@{'/category/' + ${category.name}}">
                     <div class="col-lg-12">
                         <div class="movies-box-image-container">
                             <img role="presentation"
-                                 th:src="@{'/images/' + ${category.imageURl}}"
+                                 th:src="@{'/images/' + ${category.imageURL}}"
                                  class="movies-box-image">
                         </div>
                         <div class="movies-listing-title" th:text="${category.name}"></div>
