Massive organization + Director model,dto,mapper

--- a/src/main/resources/templates/fragmets/categorydiv.html
+++ b/src/main/resources/templates/fragmets/categorydiv.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-    <!--/*@thymesVar id="category" type="adrianromanski.movies.domain.Category"*/-->
+<!--/*@thymesVar id="category" type="adrianromanski.movies.domain.base_entity.Category"*/-->
     <div class="col-md-4" th:fragment="categorydiv">
         <div class="movies-listing">
             <div class="row">
