--- a/src/main/resources/templates/fragmets/moviediv.html
+++ b/src/main/resources/templates/fragmets/moviediv.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-<!--/*@thymesVar id="movie" type="adrianromanski.movies.domain.Movie"*/-->
+<!--/*@thymesVar id="movie" type="adrianromanski.movies.domain.base_entity.Movie"*/-->
 <div class="col-md-4" th:fragment="moviediv">
     <div class="movies-listing">
         <div class="row">
