--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -14,7 +14,7 @@
 <!--<div class="jumbotron" th:replace="fragmets/jumbotron :: jumbotron"></div>-->
 
 <body>
-<!--/*@thymesVar id="userDTO" type="adrianromanski.movies.model.UserDTO"*/-->
+<!--/*@thymesVar id="userDTO" type="adrianromanski.movies.model.person.UserDTO"*/-->
 <div class="container">
     <form class="form-horizontal registration-form" th:object="${userDTO}" th:action="@{/checkRegistration}" method="post">
 
