Added UpdateCategory Method in Controller&Test and Form

--- a/src/main/resources/templates/admin/showCategories.html
+++ b/src/main/resources/templates/admin/showCategories.html
@@ -41,7 +41,7 @@
                                     </td>
                                     <td class="col-md-1">
                                         <a class="btn btn-primary" href="#"
-                                           th:href="@{'/category/' + ${category.name + '/image'}}" role="button">Update Category</a>
+                                           th:href="@{'/admin/updateCategory/' + ${category.id}}" role="button">Update Category</a>
                                     </td>
                                     <td class="col-md-1">
                                         <a class="btn btn-danger" href="#"
