--- a/src/main/resources/templates/admin/imageUplForm.html
+++ b/src/main/resources/templates/admin/imageUplForm.html
@@ -15,23 +15,29 @@
 
 <body>
 
-<div class="container-fluid" style="margin-top: 20px">
+<div class="container" style="margin-top: 80px">
     <div class="row">
-        <div class="col-md-6 col-md-offset-3">
+        <div class="col-md-4 col-md-offset-4">
             <div class="panel-group">
                 <div class="panel panel-primary">
                     <div class="panel-heading">
-                        <h1 class="panel-title">Upload a new Category Image</h1>
+                        <h1 class="panel-title">Upload an Image</h1>
                     </div>
                     <div class="panel-body">
-                        <div class="row">
-                            <div class="col-md-5">
+                        <div>
+                            <div class="row col-md-4">
                                 <form  action="http:\\localhost" method="post" enctype="multipart/form-data"
                                        th:action="@{'/category/' + ${category.name} + '/image'}">
-                                    <label class="control-label">Select File</label>
-                                    <input id="imagefile" name="imagefile" type="file" class="file">
-                                    <button type="submit" class="btn btn-primary">Submit</button>
+<!--                                    <div class="row col-md-4 col-md-pull-1">-->
+<!--                                        <label class="control-label">Select File</label>-->
+<!--                                    </div>-->
+                                    <div class="row col-md-4 col-md-pull-1 select-file">
+                                        <input id="imagefile" name="imagefile" type="file" class="file">
+                                    </div>
                                 </form>
+                            </div>
+                            <div class="row col-md-4 col-md-push-6">
+                                <button type="submit" class="btn btn-primary btn-lg">Submit</button>
                             </div>
                         </div>
                     </div>
