--- a/src/main/resources/templates/admin/createCategoryForm.html
+++ b/src/main/resources/templates/admin/createCategoryForm.html
@@ -19,7 +19,7 @@
 
 
         <div class="col-md-8 col-md-offset-2">
-        <form th:object="${categoryDTO}" th:action="@{checkCategory}" method="post">
+        <form th:object="${categoryDTO}" th:action="@{'/admin/createCategory/check'}" method="post">
 
             <div th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
                 <p>Please correct values in error block</p>
