--- a/src/main/resources/templates/fragmets/moviediv.html
+++ b/src/main/resources/templates/fragmets/moviediv.html
@@ -21,7 +21,7 @@
                 <div class="col-lg-12">
                     <div class="movies-box-image-container">
                         <img role="presentation"
-                             th:src="@{'/images/' + ${movie.imageURL}}"
+                             th:src="@{'/movie/' + ${movie.name} + '/movieImage'}"
                              class="movies-box-image">
                     </div>
                     <div class="movies-listing-title" th:text="${movie.name}"></div>
