--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -14,12 +14,13 @@
 <div class="jumbotron" th:replace="fragmets/jumbotron :: jumbotron"></div>
 <body>
 
-<div class="container movies-section">
-    <div class="row">
-        <div class="col-md-12">
-            <h1>Movies</h1>
-        </div>
+<div class="row">
+    <div class="col-md-12">
+        <h1 class="category-header-2">Science Fiction</h1>
     </div>
+</div>
+
+<div class="container col-md-10 col-md-offset-1 movies-section style=" style="margin-top: 75px">
     <div class="row">
         <div class="row">
             <div th:each="movie: ${movies}">
