--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,7 +14,7 @@
 <div class="jumbotron" th:replace="fragmets/jumbotron :: jumbotron"></div>
 <body>
 
-<div class="container movies-section">
+<div class="container-fluid movies-section">
     <div class="row">
         <div class="col-md-12">
             <h1>Categories</h1>
