Bootstrapping Data for Categories

--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -20,7 +20,7 @@
     </div>
 </div>
 
-<div class="container col-md-10 col-md-offset-1 movies-section style=" style="margin-top: 75px">
+<div class="container col-md-10 col-md-offset-1 movies-section" style="margin-top: 75px">
     <div class="row">
         <div class="row">
             <div th:each="movie: ${movies}">
