--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,12 +14,14 @@
 <div class="jumbotron" th:replace="fragmets/jumbotron :: jumbotron"></div>
 <body>
 
-<div class="container-fluid movies-section">
-    <div class="row">
-        <div class="col-md-12">
-            <h1>Categories</h1>
-        </div>
+
+<div class="row">
+    <div class="col-md-12">
+        <h1 class="category-header-2"> Categories</h1>
     </div>
+</div>
+
+<div class="container col-md-10 col-md-offset-1 movies-section" style="margin-top: 75px">
     <div class="row">
         <div class="row">
             <div th:each="category: ${Categories}">
