--- a/src/main/resources/templates/admin/category/showCategories.html
+++ b/src/main/resources/templates/admin/category/showCategories.html
@@ -9,7 +9,7 @@
 
     <link th:href="@{/css/custom.css}" rel="stylesheet" media="screen"/>
 
-    <title>Create Category</title>
+    <title>Show Categories</title>
 </head>
 <div class="jumbotron" th:replace="fragmets/jumbotron :: jumbotron"></div>
 
