--- a/src/main/resources/templates/admin/movie/createMovieForm.html
+++ b/src/main/resources/templates/admin/movie/createMovieForm.html
@@ -9,7 +9,7 @@
 
     <link th:href="@{/css/custom.css}" rel="stylesheet" media="screen"/>
 
-    <title>Create Category</title>
+    <title>Create Movie</title>
 </head>
 <!--<div class="jumbotron" th:replace="fragmets/jumbotron :: jumbotron"></div>-->
 
