--- a/src/main/resources/templates/fragmets/categorydiv.html
+++ b/src/main/resources/templates/fragmets/categorydiv.html
@@ -21,7 +21,7 @@
                     <div class="col-lg-12">
                         <div class="movies-box-image-container">
                             <img role="presentation"
-                                 th:src="@{'/category/' + ${category.name} + '/categoryImage'}"
+                                 th:src="@{'/category/' + ${category.id} + '/categoryImage'}"
                                  class="movies-box-image">
                         </div>
                         <div class="movies-listing-title" th:text="${category.name}"></div>
