Added Update Movie fields functionality to Controller/Service & Testing

--- a/src/main/resources/templates/admin/movie/selectCategoryForMovieForm.html
+++ b/src/main/resources/templates/admin/movie/selectCategoryForMovieForm.html
@@ -20,7 +20,7 @@
 
         <div class="col-md-8 col-md-offset-2">
             <div class="panel-group">
-                <div class="panel panel-info">
+                <div class="panel panel-primary">
                     <div class="panel panel-heading">
                         <h1 class="panel-title">Select Category</h1>
                     </div>
