--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -20,7 +20,7 @@
 
 body {
     background-size: auto;
-    background-image: linear-gradient(to right bottom,
+    background-image: linear-gradient(to bottom,
     #141E30, #2980b9);
     background-repeat: no-repeat;
     color: lightslategrey;
@@ -165,6 +165,13 @@ img {
     font-family: 'Dancing Script', cursive;
     font-size: 80px;
     margin-bottom: 30px;
+}
+
+/*Admin NavBar*/
+
+.admin-navbar {
+    font-size: 30px;
+
 }
 
 
