--- a/src/main/resources/templates/admin/category/showCategories.html
+++ b/src/main/resources/templates/admin/category/showCategories.html
@@ -80,7 +80,7 @@
                                     <td>Something went wrong</td>
                                     <td>Something went wrong</td>
                                 </tr>
-                                <tr th:each="category : ${showCategories}">
+                                <tr th:each="category, iStat : ${categoryList}">
                                     <td class="category-name" th:text="${category.name}"></td>
                                     <td th:text="${category.description}"></td>
                                     <td class="col-md-1">
@@ -102,6 +102,23 @@
                                    th:href="@{'/admin/createCategory/'}" role="button">New Category</a>
                             </div>
                         </div>
+
+
+                        <div class="row" th:fragment="pagination">
+                            <div class="col-md-2"></div>
+                            <div class="col-md-8">
+                                <nav aria-label="Pagination">
+                                    <ul class="pagination justify-content-center">
+                                        <li class="page-item" th:each="pageNumber : ${pageNumbers}" >
+                                            <a class="page-link" th:href="@{|/admin/showCategories/page/${pageNumber}|}" th:text=${pageNumber}>1</a>
+                                        </li>
+                                    </ul>
+                                </nav>
+                            </div>
+                            <div class="col-md-2"></div>
+                        </div>
+
+
                     </div>
                 </div>
             </div>
