Fixed Broken Build - Refactoring of Test + bootstrap of Fantasy category

--- a/src/main/resources/templates/admin/adminHome.html
+++ b/src/main/resources/templates/admin/adminHome.html
@@ -31,7 +31,7 @@
                     Categories <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu">
-                    <li><a href="#" th:href="@{'/admin/showCategories/'}" type="button">Show All Categories</a></li>
+                    <li><a href="#" th:href="@{'/admin/showCategories/page/1'}" type="button">Show All Categories</a></li>
                     <li><a href="#" th:href="@{'/admin/createCategory/'}" type="button" >Create New Category</a></li>
                 </ul>
             </li>
