--- a/src/main/resources/templates/admin/category/createCategoryForm.html
+++ b/src/main/resources/templates/admin/category/createCategoryForm.html
@@ -29,7 +29,7 @@
             Categories <span class="caret"></span>
         </a>
         <ul class="dropdown-menu">
-            <li><a href="#" th:href="@{'/admin/showCategories/'}" type="button">Show All Categories</a></li>
+            <li><a href="#" th:href="@{'/admin/showCategories/page/1'}" type="button">Show All Categories</a></li>
             <li><a href="#" th:href="@{'/admin/createCategory/'}" type="button" >Create New Category</a></li>
         </ul>
     </li>
