Added Paging To Admin Movies Page

--- a/src/main/resources/templates/admin/adminHome.html
+++ b/src/main/resources/templates/admin/adminHome.html
@@ -40,7 +40,7 @@
                     Movies <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu">
-                    <li><a href="#" th:href="@{'/admin/showMovies/'}" type="button" >Show All Movies</a></li>
+                    <li><a href="#" th:href="@{'/admin/showMovies/page/1'}" type="button" >Show All Movies</a></li>
                     <li><a href="#" th:href="@{'/admin/createMovie/'}" type="button">Create New Movie</a></li>
                 </ul>
             </li>
