--- a/src/main/resources/templates/admin/movie/createMovieForm.html
+++ b/src/main/resources/templates/admin/movie/createMovieForm.html
@@ -39,7 +39,7 @@
             Movies <span class="caret"></span>
         </a>
         <ul class="dropdown-menu">
-            <li><a href="#" th:href="@{'/admin/showMovies/'}" type="button" >Show All Movies</a></li>
+            <li><a href="#" th:href="@{'/admin/showMovies/page/1'}" type="button" >Show All Movies</a></li>
             <li><a href="#" th:href="@{'/admin/createMovie/'}" type="button">Create New Movie</a></li>
         </ul>
     </li>
@@ -69,7 +69,7 @@
 
 
     <div class="col-md-8 col-md-offset-2">
-        <form th:object="${movie}" th:action="@{'/admin/createMovie/check'}" method="post">
+        <form th:object="${movieDTO}" th:action="@{'/admin/createMovie/check'}" method="post">
 
             <div th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
                 <p>Please correct values in error block</p>
