--- a/src/main/resources/templates/admin/movie/movieImageUplForm.html
+++ b/src/main/resources/templates/admin/movie/movieImageUplForm.html
@@ -27,7 +27,7 @@
                         <div class="row">
                             <div class="col-md-5">
                                 <form  action="http:\\localhost" method="post" enctype="multipart/form-data"
-                                       th:action="@{'/movie/' + ${movie.id} + '/image'}">
+                                       th:action="@{'/movie/' + ${movieDTO.id} + '/image'}">
                                     <label class="control-label">Select File</label>
                                     <input id="imagefile" name="imagefile" type="file" class="file">
                                     <button type="submit" class="btn btn-primary">Submit</button>
