--- a/src/main/resources/templates/admin/movie/updateMovieForm.html
+++ b/src/main/resources/templates/admin/movie/updateMovieForm.html
@@ -17,7 +17,7 @@
 
 
     <div class="col-md-8 col-md-offset-2">
-        <form th:object="${movie}" th:action="@{check}" method="post">
+        <form th:object="${movieDTO}" th:action="@{check}" method="post">
 
             <div th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
                 <p>Please correct values in error block</p>
