--- a/src/main/resources/templates/admin/category/createCategoryForm.html
+++ b/src/main/resources/templates/admin/category/createCategoryForm.html
@@ -106,7 +106,7 @@
                             </div>
                         </div>
                             <div class="row">
-                                <button type="submit" class="btn btn-default">Submit</button>
+                                <button type="submit" class="btn btn-success">Submit</button>
                             </div>
                         </div>
                     </div>
