--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -22,41 +22,82 @@
 <div class="jumbotron" th:replace="fragmets/jumbotron :: jumbotron"></div>
 <body>
 
-<div class="container" style="margin-top: 75px"> </div>
+<ul class="nav nav-pills admin-navbar">
+    <li class="active"><a href="#" th:href="@{'/'}" >Main Page</a></li>
+    <li class="dropdown">
+        <a data-toggle="dropdown" data-target="#" href="http://www.google.com">
+            Categories <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu">
+            <li><a href="#" th:href="@{'/categories'}" type="button">Show All Categories</a></li>
+            <li><a href="#" type="button">Something</a></li>
+        </ul>
+    </li>
+    <li class="dropdown">
+        <a data-toggle="dropdown" data-target="#" href="http://www.google.com">
+            Movies <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu">
+            <li><a href="#" type="button" >Show All Movies</a></li>
+            <li><a href="#" type="button">Something</a></li>
+        </ul>
+    </li>
+    <li class="dropdown">
+        <a data-toggle="dropdown" data-target="#" href="http://www.google.com">
+            Actors <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu">
+            <li><a href="#">Show All Movies</a></li>
+            <li><a href="#">Create New Movie</a></li>
+        </ul>
+    </li>
+    <li class="dropdown">
+        <a data-toggle="dropdown" data-target="#" href="http://www.google.com">
+            Directors <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu">
+            <li><a href="#">Show All Movies</a></li>
+            <li><a href="#">Create New Movie</a></li>
+        </ul>
+    </li>
+</ul>
+<div class="container" style="margin-top: 75px"></div>
 
 <div class="col-lg-10 col-lg-offset-1">
+
     <div class="home-listing">
+        <a th:href="@{'/categories/'}">
         <div class="row">
-            <a th:href="@{'/categories/'}">
                 <div class="col-lg-12">
                     <div class="home-listing-title" th:text="${'Event Name'}"></div>
                     <div class="home-listing-description" th:text="${'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum'}"></div>
                 </div>
-            </a>
         </div>
+        </a>
     </div>
 
     <div class="home-listing">
-        <div class="row">
-            <a th:href="@{'/categories/'}">
+        <a th:href="@{'/categories/'}">
+            <div class="row">
                 <div class="col-lg-12">
                     <div class="home-listing-title" th:text="${'Event Name'}"></div>
                     <div class="home-listing-description" th:text="${'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum'}"></div>
                 </div>
-            </a>
-        </div>
+            </div>
+        </a>
     </div>
 
     <div class="home-listing">
-        <div class="row">
-            <a th:href="@{'/categories/'}">
+        <a th:href="@{'/categories/'}">
+            <div class="row">
                 <div class="col-lg-12">
                     <div class="home-listing-title" th:text="${'Event Name'}"></div>
                     <div class="home-listing-description" th:text="${'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum'}"></div>
                 </div>
-            </a>
-        </div>
+            </div>
+        </a>
     </div>
+
 
 
 </div>
