Added Paging for Category Movies - User

--- a/src/main/resources/templates/user/categoryMovies.html
+++ b/src/main/resources/templates/user/categoryMovies.html
@@ -71,11 +71,25 @@
 <div class="container col-md-10 col-md-offset-1 movies-section" style="margin-top: 75px">
     <div class="row">
         <div class="row">
-            <div th:each="movie: ${movies}">
+            <div th:each="movie: ${moviesDTOList}">
                 <div th:replace="fragmets/moviediv :: moviediv">
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="row" th:fragment="pagination">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+            <nav aria-label="Pagination">
+                <ul class="pagination justify-content-center">
+                    <li class="page-item" th:each="pageNumber : ${pageNumbers}" >
+                        <a class="page-link" th:href="@{|/category/${categoryDTO.name}/page/${pageNumber}|}" th:text=${pageNumber}>1</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div class="col-md-2"></div>
     </div>
 </div>
 </body>
