--- a/src/main/resources/templates/fragmets/categorydiv.html
+++ b/src/main/resources/templates/fragmets/categorydiv.html
@@ -17,7 +17,7 @@
     <div class="col-md-3" th:fragment="categorydiv">
         <div class="movies-listing">
             <div class="row">
-                <a th:href="@{'/category/' + ${category.name}}">
+                <a th:href="@{'/category/' + ${category.name} +'/page/1'}">
                     <div class="col-lg-12">
                         <div class="movies-box-image-container">
                             <img role="presentation"
