--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -29,7 +29,7 @@
             Categories <span class="caret"></span>
         </a>
         <ul class="dropdown-menu">
-            <li><a href="#" th:href="@{'/categories'}" type="button">Show All Categories</a></li>
+            <li><a href="#" th:href="@{'/categories/page/1'}" type="button">Show All Categories</a></li>
             <li><a href="#" type="button">Something</a></li>
         </ul>
     </li>
@@ -38,7 +38,7 @@
             Movies <span class="caret"></span>
         </a>
         <ul class="dropdown-menu">
-            <li><a href="#" type="button" >Show All Movies</a></li>
+            <li><a href="#" th:href="@{'/movies/page/1'}" type="button" >Show All Movies</a></li>
             <li><a href="#" type="button">Something</a></li>
         </ul>
     </li>
